# rust-templates

./: README.md
cli/: Cargo.toml  cargo-generate.toml  post-script.rhai  template_gitignore
cli-simple/: README.md  cargo-generate.toml
cli-simple/src/: main.rs
cli/src/: lib.rs  main.rs  mymodule.rs
cli/tests/: integration_tests.rs
minimal-script/: README.md  script.rs
script/: README.md  script.rs
