[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]
readme = "README.md"
# license = "MIT"  # https://spdx.org/licenses/
# categories = [] # https://crates.io/category_slugs
# keywords = [] # free text


[dependencies]
anyhow = "1.0"
itertools = "0.11"
derive_builder = "0.12"
lazy_static = "1.4"
clap = { version = "4.1", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
[dev-dependencies]
pretty_assertions = "1.3"
