[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2024"
authors = ["{{authors}}"]
readme = "README.md"
# license = "MIT"  # https://spdx.org/licenses/
# categories = [] # https://crates.io/category_slugs
# keywords = [] # free text


[dependencies]
anyhow = "1.0.100"
itertools = "0.14.0"
derive_builder = "0.20.2"
lazy_static = "1.5.0"
clap = { version = "4.5.48", features = ["derive"] }
log = "0.4.28"
env_logger = "0.11.8"
[dev-dependencies]
pretty_assertions = "1.4.1"
